# GFOX_Test

./: CMakeLists.txt  README.md  main.cpp
core/: notification.cpp  notification.h  placeorder.cpp  placeorder.h  processor.cpp  processor.h  run.cpp  run.h
model/: notifyTrader.cpp  notifyTrader.h  order.cpp  order.h
utility/: compare.cpp  compare.h
